-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0-beta1
-
None
-
Windows
- Start Creator with a project on the command line (no editors open)
- Ctrl-Shift F , choose scope "Current project"
- Note: search fields are disabled
For Gerrit Dashboard: QTCREATORBUG-13998 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
107310,2 | Find: Fix Current Project find to fall back to startup project | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |