Find: Fix Current Project find to fall back to startup project

If no files are open.

Change-Id: I78f695fbc128c0e4dc093ac2afef6b68ea20ba93
Task-number: QTCREATORBUG-13998
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>