src/plugins/projectexplorer/currentprojectfind.cpp
@@ -44,6 +44,14 @@ using namespace ProjectExplorer;
 using namespace ProjectExplorer::Internal;
 using namespace TextEditor;
 
+static Project *currentProject()
+{
+    Project *p = ProjectTree::currentProject();
+    if (p)
+        return p;
+    return SessionManager::startupProject();
+}
+
 CurrentProjectFind::CurrentProjectFind()
 {
     connect(ProjectTree::instance(), &ProjectTree::currentProjectChanged,
@@ -68,12 +76,12 @@ QString CurrentProjectFind::displayName() const
 
 bool CurrentProjectFind::isEnabled() const
 {
-    return ProjectTree::currentProject() != 0 && BaseFileFind::isEnabled();
+    return currentProject() != 0 && BaseFileFind::isEnabled();
 }
 
 QVariant CurrentProjectFind::additionalParameters() const
 {
-    Project *project = ProjectTree::currentProject();
+    Project *project = currentProject();
     if (project && project->document())
         return qVariantFromValue(project->projectFilePath().toString());
     return QVariant();
@@ -94,8 +102,9 @@ Utils::FileIterator *CurrentProjectFind::files(const QStringList &nameFilters,
 
 QString CurrentProjectFind::label() const
 {
-    QTC_ASSERT(ProjectTree::currentProject(), return QString());
-    return tr("Project \"%1\":").arg(ProjectTree::currentProject()->displayName());
+    Project *p = currentProject();
+    QTC_ASSERT(p, return QString());
+    return tr("Project \"%1\":").arg(p->displayName());
 }
 
 void CurrentProjectFind::handleProjectChanged()
